Img element with fixed size for no jumping around.

--- a/src/pages/register-page/register-page.scss
+++ b/src/pages/register-page/register-page.scss
@@ -31,8 +31,8 @@
         position: absolute;
 
         .v-img {
-            margin-left: 2rem;
-            width: 20%;
+            margin-left: 0rem;
+            width: 60px;
         }
 
         .link-text {
