--- a/src/pages/upload-page/upload-page.scss
+++ b/src/pages/upload-page/upload-page.scss
@@ -43,7 +43,7 @@
 
         .v-img {
             margin-left: 0rem;
-            width: 20%;
+            width: 60px;
         }
 
         .link-text {
